@@ -232,6 +232,9 @@ IMGUI_API void                ImGuiTestEngine_CrashHandler();                   
 // IO structure to configure the test engine
 //-----------------------------------------------------------------------------
 
+// Function to capture raw serial log (otherwise you can peek into Output.Log of individual tests)
+typedef void (ImGuiTestEngineLogFunc)(ImGuiTestEngine* engine, ImGuiTestContext* test_ctx, ImGuiTestVerboseLevel level, const char* message, void* user_data);
+
 // Function bound to right-clicking on a test and selecting "Open source" in the UI
 // - Easy: you can make this function call OS shell to "open" the file (e.g. ImOsOpenInShell() helper).
 // - Better: bind this function to a custom setup which can pass line number to a text editor (e.g. see 'imgui_test_suite/tools/win32_open_with_sublime.cmd' example)
@@ -256,10 +259,6 @@ struct IMGUI_API ImGuiTestEngineIO
     bool                        ConfigStopOnError = false;                      // Stop queued tests on test error
     bool                        ConfigBreakOnError = false;                     // Break debugger on test error by calling IM_DEBUG_BREAK()
     bool                        ConfigKeepGuiFunc = false;                      // Keep test GUI running at the end of the test
-    ImGuiTestVerboseLevel       ConfigVerboseLevel = ImGuiTestVerboseLevel_Warning;
-    ImGuiTestVerboseLevel       ConfigVerboseLevelOnError = ImGuiTestVerboseLevel_Info;
-    bool                        ConfigLogToTTY = false;
-    bool                        ConfigLogToDebugger = false;
     bool                        ConfigRestoreFocusAfterTests = true;// Restore focus back after running tests
     bool                        ConfigCaptureEnabled = true;        // Master enable flags for capturing and saving captures. Disable to avoid e.g. lengthy saving of large PNG files.
     bool                        ConfigCaptureOnError = false;
@@ -268,6 +267,14 @@ struct IMGUI_API ImGuiTestEngineIO
     float                       ConfigFixedDeltaTime = 0.0f;        // Use fixed delta time instead of calculating it from wall clock
     int                         PerfStressAmount = 1;               // Integer to scale the amount of items submitted in test
     char                        GitBranchName[64] = "";             // e.g. fill in branch name (e.g. recorded in perf samples .csv)
+
+    // Options: Logging
+    ImGuiTestVerboseLevel       ConfigVerboseLevel = ImGuiTestVerboseLevel_Warning;
+    ImGuiTestVerboseLevel       ConfigVerboseLevelOnError = ImGuiTestVerboseLevel_Info;
+    bool                        ConfigLogToTTY = false;             // Output log entries to TTY (in addition to Test Engine UI)
+    bool                        ConfigLogToDebugger = false;        // Output log entries to Debugger (in addition to Test Engine UI)
+    ImFuncPtr(ImGuiTestEngineLogFunc) ConfigLogToFunc = nullptr;    // Hook for logging of full serial log (vs peeking into ImGuiTest->Output.Log for a single test)
+    void*                       ConfigLogToFuncUserData = NULL;
 
     // Options: Speed of user simulation
     float                       MouseSpeed = 600.0f;                // Mouse speed (pixel/second) when not running in fast mode
